--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 # Virtual Environment
 venv
 
+# OctoFit Tracker backend venv
+/octofit-tracker/backend/venv/
+
 # octofit tracker app
 # octfit-tracker
 
